fix:only dark mode allowed

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,8 +123,17 @@
 	}
 }
 .bg-dashed {
-	background-image: linear-gradient(45deg, var(--border) 12.5%, transparent 12.5%, transparent 50%, var(--border) 50%, var(--border) 62.5%, transparent 62.5%, transparent 100%);
-	background-size: .25rem .25rem;
-	border-top: 1px  solid	 var(--border);
-	border-bottom: 1px   solid var(--border);
+	background-image: linear-gradient(
+		45deg,
+		var(--border) 12.5%,
+		transparent 12.5%,
+		transparent 50%,
+		var(--border) 50%,
+		var(--border) 62.5%,
+		transparent 62.5%,
+		transparent 100%
+	);
+	background-size: 0.25rem 0.25rem;
+	border-top: 1px solid var(--border);
+	border-bottom: 1px solid var(--border);
 }
